src/objects/REG_API_Trace_Detail__c/REG_API_Trace_Detail__c.object-meta.xml
<CustomObject>
    <description>To log the error/trace as a result of calling API</description>
    <label>REG API Trace Detail</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Trace Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REG API Trace Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>