src/objects/REG_API_Trace_Detail__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>Contains the name of API in which error occured</description>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>