src/objects/REG_API_Trace_Detail__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>