src/objects/REG_API_Trace_Detail__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>