src/objects/REG_API_Trace_Detail__c/fields/inputs__c.field-meta.xml
<CustomField>
    <fullName>inputs__c</fullName>
    <label>inputs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>