src/objects/REG_API_Trace_Detail__c/fields/Request_Headers__c.field-meta.xml
<CustomField>
    <fullName>Request_Headers__c</fullName>
    <label>Request Headers</label>
    <length>3600</length>
    <type>LongTextArea</type>
</CustomField>