src/objects/REG_API_Trace_Detail__c/fields/Request_Method__c.field-meta.xml
<CustomField>
    <fullName>Request_Method__c</fullName>
    <label>Request Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>