src/objects/REG_API_Trace_Detail__c/fields/Request_URI__c.field-meta.xml
<CustomField>
    <fullName>Request_URI__c</fullName>
    <description>URI of request</description>
    <label>Request URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>