src/objects/REG_API_Trace_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>inputs__c</columns>
    <columns>Request_URI__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>LAST_N_DAYS:15</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>